--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "@badeball/cypress-cucumber-preprocessor": "^18.0.6",
     "@bahmutov/cypress-esbuild-preprocessor": "^2.2.0",
     "cypress": "^13.3.0",
+    "cypress-xpath": "^2.0.1",
     "ts-loader": "^9.4.4"
   },
-  "cypress-cucumber-preprocessor":{
-    "stepDefinitions":"cypress/support/step_definitions/**/*.js"
+  "cypress-cucumber-preprocessor": {
+    "stepDefinitions": "cypress/support/step_definitions/**/*.js"
   }
 }
